Fix spacing

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -49,7 +49,7 @@ a {
 
 .body-row {
   padding-top: 25px;
-  padding-bottom: 70px;
+  padding-bottom: 35px;
   border-bottom: 1px solid #bbbbbb;
 }
 
@@ -95,6 +95,7 @@ a {
   font-size: 14px;
   font-family: "Droid Serif";
   line-height: 25px;
+  padding-bottom: 10px;
 }
 
 .resume-img {
@@ -150,10 +151,6 @@ a {
 
   .jumbotron h2 {
     text-align: center;
-  }
-
-  .body-row {
-    padding-bottom: 35px;
   }
 
   .about-body {
